# DG_rotations

./: .gitignore  README.md  dg_rotation.files  dg_rotation.includes
eval3D/: CMakeLists.txt
eval3D/output/: eval_logs.txt
eval3D/src/: main.cpp
rotation2D/: CMakeLists.txt  main.cpp
rotation2D/include/: digital_objects.h  images.h  rotations.h  tools.h
rotation2D/output/dt_set/: im_add_DT.eps
rotation2D/output/pre_processing/: inverse.eps
rotation2D/output/rotation_BIC/: bic.eps
rotation2D/output/rotation_BIL/: bil.eps
rotation2D/output/rotation_NN/: NN.eps
rotation2D/samples/: export.pgm  export2.pgm  oval.pgm  quad_hole.pgm  snowflake.pgm  square.pgm  sw.pgm  triangle.pgm  triangle2_hole.pgm  triangle_hole.pgm
rotation2D/src/: digital_objects.cpp  images.cpp  main.cpp  rotations.cpp  tools.cpp
rotation3D/: CMakeLists.txt
rotation3D/output/: NN_DT.vol  starting_DT.vol  tril_DT.vol
rotation3D/output/pre_processing/: dm_inv.eps  dm_merging.eps  dm_or.eps  image.eps  inverse.eps
rotation3D/output/rotation_BIC/: bic.eps  bic.pgm
rotation3D/output/rotation_BIL/: bil.eps  bil.pgm
rotation3D/output/rotation_NN/: NN.eps  NN.pgm
rotation3D/src/: main.cpp
